# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: brain_even.py  cli.py  engine.py  even.py
brain_games/games/: brain_gcd.py  calculator.py  cli.py  even.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
