[tool.poetry]
name = "asalex04_brain_games"
version = "0.1.1"
description = ""
authors = ["None"]
packages = [
   {include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
